[package]
name = "my-redis"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.9.0"
mini-redis = "0.4.1"
tokio = { version = "1.42.0", features = ["full"] }
atoi = "0.3.3"
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1.42.0", features = ["test-util"] }

[[example]]
name="hello-redis"
path="examples/hello-redis.rs"
