[package]
name = "my-redis"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.9.0"
tokio = { version = "1.42.0", features = ["full"] }
atoi = "2.0.0"
tracing = "0.1.41"
tokio-stream = {version="0.1.17",features=["full"]}
tracing-subscriber = "0.3.19"
clap = { version = "4.0", features = ["derive"] }
async-stream = "0.3.6"


[dev-dependencies]
tokio = { version = "1.42.0", features = ["test-util"] }

[[example]]
name="hello-redis"
path="examples/hello-redis.rs"
